src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Gam_Default</fullName>
        <description>Phasen samt Wahrscheinlichkeiten für Games Standard</description>
        <isActive>true</isActive>
        <values>
            <fullName>Geschlossen und verloren</fullName>
        </values>
        <values>
            <fullName>Geschlossene und gewonnene</fullName>
        </values>
        <values>
            <fullName>Konkretes Angebot</fullName>
        </values>
        <values>
            <fullName>Kunde ist interessiert</fullName>
        </values>
        <values>
            <fullName>Kunde ist sehr interessiert</fullName>
        </values>
        <values>
            <fullName>Potential</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>M%26A Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Potential</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Maxdome</fullName>
        <description>Maxdome Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>SE_Allgemeines Angebot</fullName>
        </values>
        <values>
            <fullName>SE_Closed Lost</fullName>
        </values>
        <values>
            <fullName>SE_Closed Won</fullName>
        </values>
        <values>
            <fullName>SE_In Verhandlung</fullName>
        </values>
        <values>
            <fullName>SE_Konkretes Angebot</fullName>
        </values>
        <values>
            <fullName>SE_Vertragsvorbereitung</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Excellence Default</fullName>
        <description>Sales Excellence Default</description>
        <isActive>true</isActive>
        <values>
            <fullName>SE_Closed Lost</fullName>
        </values>
        <values>
            <fullName>SE_Closed Won</fullName>
        </values>
        <values>
            <fullName>SE_In Verhandlung</fullName>
        </values>
        <values>
            <fullName>SE_Konkretes Angebot</fullName>
        </values>
        <values>
            <fullName>SE_Potenzial</fullName>
        </values>
        <values>
            <fullName>SE_Vertragsvorbereitung</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SomDig_Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Allgemeines Angebot</fullName>
        </values>
        <values>
            <fullName>Erstgespräch Bedarf%2FBestand</fullName>
        </values>
        <values>
            <fullName>Geschlossen und verloren</fullName>
        </values>
        <values>
            <fullName>Geschlossene und gewonnene</fullName>
        </values>
        <values>
            <fullName>Konkretes Angebot</fullName>
        </values>
        <values>
            <fullName>Kunde ist interessiert</fullName>
        </values>
        <values>
            <fullName>Kunde ist sehr interessiert</fullName>
        </values>
        <values>
            <fullName>Potential</fullName>
        </values>
        <values>
            <fullName>Storniert</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SomTv_Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Angebot abgegeben</fullName>
        </values>
        <values>
            <fullName>Geschlossen und verloren</fullName>
        </values>
        <values>
            <fullName>Geschlossene und gewonnene</fullName>
        </values>
        <values>
            <fullName>Identifiziert</fullName>
        </values>
        <values>
            <fullName>In Briefing</fullName>
        </values>
        <values>
            <fullName>Rabatt freigegeben</fullName>
        </values>
        <values>
            <fullName>Storniert</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Ven_Default</fullName>
        <description>Vertriebsprozess für SevenVentures</description>
        <isActive>true</isActive>
        <values>
            <fullName>SE_Closed Lost</fullName>
        </values>
        <values>
            <fullName>SE_Closed Won</fullName>
        </values>
        <values>
            <fullName>SE_Deal Approval</fullName>
        </values>
        <values>
            <fullName>SE_Erstgespräch Bedarf%2FBestand</fullName>
        </values>
        <values>
            <fullName>SE_In Briefing%2FErstgespräch</fullName>
        </values>
        <values>
            <fullName>SE_Parked</fullName>
        </values>
        <values>
            <fullName>SE_Potenzial</fullName>
        </values>
        <values>
            <fullName>SE_Rabatt freigegeben</fullName>
        </values>
        <values>
            <fullName>SE_Storniert</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>d%26a Sales Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>SE_Closed Lost</fullName>
        </values>
        <values>
            <fullName>SE_Closed Won</fullName>
        </values>
        <values>
            <fullName>SE_In Verhandlung</fullName>
        </values>
        <values>
            <fullName>SE_Konkretes Angebot</fullName>
        </values>
        <values>
            <fullName>SE_Potenzial</fullName>
        </values>
        <values>
            <fullName>SE_Vertragsvorbereitung</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>DA_Sales_MB__c</fullName>
        <label>MB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Sales_PartnerYieldExtern__c</fullName>
        <label>Partner Yield (extern)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Sales_PartnerYieldIntern__c</fullName>
        <label>Overall Yield (intern)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_Complexity__c</fullName>
        <description>KV02219</description>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Casual</fullName>
                </value>
                <value>
                    <fullName>Midcore</fullName>
                </value>
                <value>
                    <fullName>Hardcore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_CriteriaDev__c</fullName>
        <description>KV02219</description>
        <label>Criteria: Dev</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_CriteriaGenre__c</fullName>
        <description>KV02219</description>
        <label>Criteria: Genre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_CriteriaMktg__c</fullName>
        <description>KV02219</description>
        <label>Criteria: Mktg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_CriteriaStrategic__c</fullName>
        <description>KV02219</description>
        <label>Criteria: Strategic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_CriteriaSuccess__c</fullName>
        <description>KV02219</description>
        <label>Criteria: Success</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_DealType__c</fullName>
        <description>KV02219</description>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pure Pub</fullName>
                </value>
                <value>
                    <fullName>Port &amp; Pub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_ETA__c</fullName>
        <description>KV02219</description>
        <label>ETA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Genre__c</fullName>
        <description>KV02219</description>
        <label>Genre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Platform__c</fullName>
        <description>KV02219</description>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAM_Technology__c</fullName>
        <description>KV02219</description>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_USP__c</fullName>
        <description>KV02219</description>
        <label>USP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gam_Entwicklungsstadium__c</fullName>
        <description>Eigenes Feld für für Games Licensing (KV 01026)</description>
        <inlineHelpText>Current Development Stage of the product</inlineHelpText>
        <label>Entwicklungsstadium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20% - Concept Available</fullName>
                </value>
                <value>
                    <fullName>40% - Alpha Build</fullName>
                </value>
                <value>
                    <fullName>60% - Beta Build</fullName>
                </value>
                <value>
                    <fullName>80% - Release Candidate</fullName>
                </value>
                <value>
                    <fullName>100% - Launched in other Territories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gam_GMVPipeline__c</fullName>
        <formula>Gam_GMV__c  *  Probability</formula>
        <label>GMV-Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gam_GMV__c</fullName>
        <description>GrossMediaVolume wie viele Brutto TV Medialeistung wird für diese Spiel aufgewendet?</description>
        <inlineHelpText>Gross Media Volume that is spent on the campaign</inlineHelpText>
        <label>GMV (in m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gam_MigrationTemp__c</fullName>
        <label>Gam_MigrationTemp</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gam_MinimumGarantie__c</fullName>
        <description>Wie hoch ist die Garantiesumme für diesen Distributionspartner. Gehört eigentlich in einen Vertrag nicht in Oppty.</description>
        <inlineHelpText>Please enter the total minimum guarantee for the opportunity</inlineHelpText>
        <label>Minimum Garantie</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gam_PipelineAmount__c</fullName>
        <description>Dublette des SF-Standarfeldes &quot;ExpectedRevenue&quot;; in KV 1928 gefragt, ob dieses Feld aus Games-Sicht gelöscht werden kann. Ggf. Berichte kontrollieren/beachten.</description>
        <formula>Amount  *  Probability</formula>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gam_Prioritaet__c</fullName>
        <description>Wichtigkeit der Opportunity (KV 1527)</description>
        <inlineHelpText>Indicates the urgency of the Opportunity</inlineHelpText>
        <label>Priorität</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hoch</fullName>
                </value>
                <value>
                    <fullName>Mittel</fullName>
                </value>
                <value>
                    <fullName>Niedrig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gam_RankingLink__c</fullName>
        <description>Link zur Einstufung nach Umsatz / Beliebtheit von App Annie, Gametrics und anderen Quellen</description>
        <inlineHelpText>Top grossing / popularity ranking link from App Annie, Gametrics or other sources.</inlineHelpText>
        <label>Ranking Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gam_Revenue_first_year__c</fullName>
        <description>Revenue first year - was wird an Umsatz im ersten Jahr erwartet für dieses Spiel?</description>
        <inlineHelpText>Revenue first year - was wird an Umsatz im ersten Jahr erwartet für dieses Spiel?</inlineHelpText>
        <label>Revenue first year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gam_Revenue_lifetime__c</fullName>
        <description>Wie hoch wird der Umsatz während des Lebenszyklus dieses Spiels sein?</description>
        <inlineHelpText>Wie hoch wird der Umsatz während des Lebenszyklus dieses Spiels sein?</inlineHelpText>
        <label>Revenue lifetime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gam_Revenue_peak_year__c</fullName>
        <description>Wie hoch soll der höchste Umsatz pro Jahr für dieses Spiel sein?</description>
        <inlineHelpText>Wie hoch soll der höchste Umsatz pro Jahr für dieses Spiel sein?</inlineHelpText>
        <label>Revenue peak year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gam_Type__c</fullName>
        <description>Kennzeichnet eine Chance um welchen Typ einer vertrieblichen Chance es sich handelt.</description>
        <inlineHelpText>Kennzeichnet eine Chance um welchen Typ einer vertrieblichen Chance es sich handelt.</inlineHelpText>
        <label>Type (Gam)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Content Partner Deal</fullName>
                </value>
                <value>
                    <fullName>Distribution Partner Deal</fullName>
                </value>
                <value>
                    <fullName>Licence Partner Deal</fullName>
                </value>
                <value>
                    <fullName>Mobile Partner Deal</fullName>
                </value>
                <value>
                    <fullName>Payment Partner Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gam_Umsatzpotenzial__c</fullName>
        <description>Benutzerdefiniertes Feld für Games Licensing (KV 01026)</description>
        <inlineHelpText>Estimated Gross Potential of the product: High = 1.6m/year, Mid = 730k/year, Low = 310k/year</inlineHelpText>
        <label>Umsatzpotenzial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Performer</fullName>
                </value>
                <value>
                    <fullName>Mid Performer</fullName>
                </value>
                <value>
                    <fullName>Low Performer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hilfsfeld_Opp_Approval_SV_final_Rejecti__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Es handelt sich um eine Hilfsfeld für den Opportunity Approval-Prozess von Seven Ventures.</description>
        <inlineHelpText>Es handelt sich um eine Hilfsfeld für den Opportunity Approval-Prozess von Seven Ventures. Wenn die Markeirung gesetzt ist, wird der Datensatz nicht mehr in einen Approval-Prozess von Seven Ventures eintreten.</inlineHelpText>
        <label>Hilfsfeld Opp. Approval SV final Rejecti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ist_Ideenpapier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Handelt es sich bei Diesem Angebot um ein Ideenpapier des SAC?</description>
        <inlineHelpText>Handelt es sich bei Diesem Angebot um ein Ideenpapier des SAC?</inlineHelpText>
        <label>Ist Ideenpapier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kampagne__c</fullName>
        <description>Name der Kampagne - wie auch in ProDia der Kampagnen-Name heute</description>
        <inlineHelpText>Name der Kampagne - wie auch in ProDia der Kampagnen-Name heute</inlineHelpText>
        <label>Kampagne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kampagnenende__c</fullName>
        <description>wann endet diese Kampagne</description>
        <inlineHelpText>Wann endet diese Kampagne?</inlineHelpText>
        <label>Kampagnenende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kampagnenstart__c</fullName>
        <description>Wann beginnt diese Kampagne?</description>
        <inlineHelpText>Wann beginnt diese Kampagne?</inlineHelpText>
        <label>Kampagnenstart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MB1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Befüllt durch die Schnittstelle zu ProDia - betrifft alle Geschäftsarten</description>
        <inlineHelpText>Befüllt durch die Schnittstelle zu ProDia - betrifft alle Geschäftsarten</inlineHelpText>
        <label>MB1 Auftrag Gesamt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MB3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Befüllt durch die Schnittstelle zu ProDia</description>
        <inlineHelpText>Befüllt durch die Schnittstelle zu ProDia</inlineHelpText>
        <label>MB3 Auftrag Gesamt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MN1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Befüllt durch die Schnittstelle zu ProDia - betrifft alle Geschäftsarten</description>
        <inlineHelpText>Befüllt durch die Schnittstelle zu ProDia - betrifft alle Geschäftsarten</inlineHelpText>
        <label>MN1 Auftrag Gesamt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MN2_Gewichtet__c</fullName>
        <description>Wie hoch ist der gewichtete MN3 somit MN3 mal Wahrscheinlichkeit des Angebots</description>
        <formula>MN2__c  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wie hoch ist der gewichtete MN3 somit MN3 mal Wahrscheinlichkeit des Angebots</inlineHelpText>
        <label>MN2 Gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MN2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Wird heute über die Schnittstelle von ProDia übergeben und umfasst alle Geschäftsarten.</description>
        <inlineHelpText>Wird heute über die Schnittstelle von ProDia übergeben und umfasst alle Geschäftsarten.</inlineHelpText>
        <label>MN2 Auftrag Gesamt</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MN3_Gewichtet__c</fullName>
        <description>Wie hoch ist der gewichtete MN3 somit MN3 mal Wahrscheinlichkeit des Angebots</description>
        <formula>IF(MN3__c=0, SomTv_MN3__c * Probability,MN3__c  *  Probability)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wie hoch ist der gewichtete MN3 somit MN3 mal Wahrscheinlichkeit des Angebots</inlineHelpText>
        <label>MN3 Gewichtet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MN3__c</fullName>
        <formula>0.98 *  MN2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN3 Auftrag Gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_InternalCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hat diese Kampagne einen externen Partner oder ist sie nur intern (vom Asset alleine betrieben).</description>
        <label>Interne Kampagne</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maxdome_ApprovalNeeded__c</fullName>
        <label>Approval needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maxdome_Offer__c</fullName>
        <label>Offer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maxdome_SalesBereich__c</fullName>
        <label>Sales Bereich</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Industry Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maxdome_StatusStudioApproval__c</fullName>
        <label>Status Studio Approval</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Maxdome_ApprovalNeeded__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>in Progress</fullName>
                    <default>true</default>
                    <label>in Progress</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maxdome_SubsEST__c</fullName>
        <inlineHelpText>Erwartete Subscriber</inlineHelpText>
        <label>Subs EST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maxdome_Subs_ACT__c</fullName>
        <inlineHelpText>Tatsächliche Subscriber</inlineHelpText>
        <label>Subs ACT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_ApprovalReady__c</fullName>
        <formula>AND(
 NOT( ISBLANK( Name )),
 NOT( LEN( P7S1_Description255__c ) &lt; 10 ),
 NOT( ISBLANK( P7S1_CustomerProduct__c )),
 NOT( ISBLANK( Kampagnenstart__c )),
 NOT( ISBLANK( Kampagnenende__c )),
 NOT(
  AND(
   P7S1_HasMediaTV__c = FALSE,
   P7S1_HasMediaDigital__c = FALSE,
   P7S1_HasMediaLizenz__c = FALSE,
   P7S1_HasMediaBarter__c = FALSE,
   P7S1_HasMediaTicketing__c = FALSE
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pflichtfeldprüfung bestanden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_ApprovalState__c</fullName>
        <description>Zeigt den Status des zugehörigen Genehmigungsprozesses auf der Freigabe an</description>
        <inlineHelpText>Zeigt den Status des zugehörigen Genehmigungsprozesses auf der Freigabe an</inlineHelpText>
        <label>Genehmigungsstatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_BmvInput__c</fullName>
        <label>BMV gesamt (Eingabe)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_Bmv__c</fullName>
        <formula>IF(
 ISBLANK( P7S1_BmvInput__c ),
 Som_BmvTV__c + Som_BmvDigital__c,
 P7S1_BmvInput__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV gesamt (kalk.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_ContractEnd__c</fullName>
        <description>Ende der Vertragslaufzeit.</description>
        <label>Vertragsende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_ContractStart__c</fullName>
        <description>The start of the actual legal contract the campaign is based on. May be before or on the campaign start, but never after it.</description>
        <label>Vertragsbeginn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_CurrentOwnerEmail__c</fullName>
        <description>Hilfsfeld für Workflow</description>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hilfsfeld für Workflow</inlineHelpText>
        <label>E-Mail-Aktueller-Benutzer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CustomerProduct__c</fullName>
        <label>Kundenprodukt</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_DandACluster__c</fullName>
        <formula>/*CONSIDER TO ADJUST SHARING RULES FOR d&amp;a Units (7NXT, 7Commerce, 7Travel) WHEN NEW ASSET IS ADDED*/


CASE( P7S1_DandASalesAsset__c  ,

 &quot;wetter.com GmbH&quot; , &quot;7TRAVEL&quot; ,
 &quot;Tropo GmbH&quot; , &quot;7TRAVEL&quot; ,
 &quot;Discavo GmbH&quot; , &quot;7TRAVEL&quot; ,
 &quot;Silver Tours GmbH (billiger-mietwagen.de)&quot; , &quot;7TRAVEL&quot; ,
 &quot;COMVEL GmbH (weg.de)&quot; , &quot;7TRAVEL&quot; ,
 &quot;mydays GmbH&quot; , &quot;7TRAVEL&quot; ,
 &quot;etraveli AB (ueberflieger.de)&quot; , &quot;7TRAVEL&quot; ,

 &quot;7NXT GmbH&quot; , &quot;7NXT&quot; ,

 &quot;Valmano GmbH&quot; , &quot;7COMMERCE&quot; ,
 &quot;Verivox GmbH&quot; , &quot;7COMMERCE&quot; ,
 &quot;preis24.de GmbH&quot; , &quot;7COMMERCE&quot; ,
 &quot;12Auto Group GmbH&quot; , &quot;7COMMERCE&quot; ,
 &quot;moebel.de Einrichten und Wohnen AG&quot; , &quot;7COMMERCE&quot; ,
 &quot;Sonoma Internet GmbH (amorelie.de)&quot; , &quot;7COMMERCE&quot; ,
 &quot;Flaconi GmbH&quot; , &quot;7COMMERCE&quot; ,
 &quot;Stylight GmbH&quot; , &quot;7COMMERCE&quot; ,

 null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>d&amp;a Sales Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_DandASalesAsset__c</fullName>
        <label>d&amp;a Sales Asset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12Auto Group GmbH</fullName>
                </value>
                <value>
                    <fullName>7NXT GmbH</fullName>
                </value>
                <value>
                    <fullName>COMVEL GmbH (weg.de)</fullName>
                </value>
                <value>
                    <fullName>Discavo GmbH</fullName>
                </value>
                <value>
                    <fullName>etraveli AB (ueberflieger.de)</fullName>
                </value>
                <value>
                    <fullName>Flaconi GmbH</fullName>
                </value>
                <value>
                    <fullName>moebel.de Einrichten und Wohnen AG</fullName>
                </value>
                <value>
                    <fullName>mydays GmbH</fullName>
                </value>
                <value>
                    <fullName>preis24.de GmbH</fullName>
                </value>
                <value>
                    <fullName>Silver Tours GmbH (billiger-mietwagen.de)</fullName>
                </value>
                <value>
                    <fullName>Sonoma Internet GmbH (amorelie.de)</fullName>
                </value>
                <value>
                    <fullName>Tropo GmbH</fullName>
                </value>
                <value>
                    <fullName>Valmano GmbH</fullName>
                </value>
                <value>
                    <fullName>Verivox GmbH</fullName>
                </value>
                <value>
                    <fullName>wetter.com GmbH</fullName>
                </value>
                <value>
                    <fullName>Stylight GmbH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_DataCheck__c</fullName>
        <description>Status der Datenprüfung. Zeigt an, ob Datensätze zur Datenprüfung anstehend sind oder Prüfung erfolgt ist.</description>
        <inlineHelpText>Status der Datenprüfung. Zeigt an, ob Datensätze zur Datenprüfung anstehend sind oder Prüfung erfolgt ist.</inlineHelpText>
        <label>Datenprüfung</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ausstehend</fullName>
                    <color>#FF0000</color>
                    <label>ausstehend</label>
                </value>
                <value>
                    <fullName>geprüft</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>geprüft</label>
                </value>
                <value>
                    <fullName>irrelevant</fullName>
                    <color>#DDDDDD</color>
                    <label>irrelevant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>